{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 1953,
  "lineage": "6eb5c566-6de9-9a72-38b5-ae7d0947940c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "nacl-awx-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0a2b9980248325549",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a2b9980248325549",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "374456436099",
            "subnet_ids": [
              "subnet-01d7c48fcd7c091b7",
              "subnet-03d0b6da3ff66404a",
              "subnet-047e84b20d0e26090",
              "subnet-0897d2adfaec4cc57",
              "subnet-0d1d0b3bdf8949bb1"
            ],
            "tags": {
              "Name": "NACL-awx-default"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt-awx-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-06d6c46c12e91cdbc",
            "id": "rtb-06d6c46c12e91cdbc",
            "owner_id": "374456436099",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d28d0296be125e75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-default"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-awx",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "sg-awx-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0d0baa70f2f203793",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0baa70f2f203793",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-awx-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-051ce5bab428b3014",
            "public_dns": "ec2-15-165-199-183.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.199.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-awx-bastion"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-natgw-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09bdf8ff324ad72f7",
            "public_dns": "ec2-13-125-33-72.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.33.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-NATGW-2a-awx"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-natgw-2c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06b7924282eb37a78",
            "public_dns": "ec2-3-34-82-48.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.82.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-NATGW-2c-awx"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d28d0296be125e75",
            "owner_id": "374456436099",
            "tags": {
              "Name": "IGW-awx"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-2a-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bdf8ff324ad72f7",
            "id": "nat-0c4709116ac521019",
            "network_interface_id": "eni-0700085ee524989ba",
            "private_ip": "10.0.1.88",
            "public_ip": "13.125.33.72",
            "subnet_id": "subnet-04315989209ba19d3",
            "tags": {
              "Name": "NATGW-2a-awx"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2a",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-2c-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b7924282eb37a78",
            "id": "nat-082cc9c2ee2f34aff",
            "network_interface_id": "eni-0f762ca5b486b4026",
            "private_ip": "10.0.2.166",
            "public_ip": "3.34.82.48",
            "subnet_id": "subnet-00417b24aaa719494",
            "tags": {
              "Name": "NATGW-2c-awx"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2c",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-awx-private-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbc680de278104e6",
            "owner_id": "374456436099",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c4709116ac521019",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-private-2a"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2a",
            "module.vpc.aws_nat_gateway.natgw-2a-awx",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-awx-private-2c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0150373a6d9cced66",
            "owner_id": "374456436099",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-082cc9c2ee2f34aff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-private-2c"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2c",
            "module.vpc.aws_nat_gateway.natgw-2c-awx",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-awx-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee0d16b1952eee97",
            "owner_id": "374456436099",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d28d0296be125e75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-public"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-awx",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2a-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9c4c90e92264dac",
            "route_table_id": "rtb-0bbc680de278104e6",
            "subnet_id": "subnet-0c59b84a96d75a9ce"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2a",
            "module.vpc.aws_nat_gateway.natgw-2a-awx",
            "module.vpc.aws_route_table.rt-awx-private-2a",
            "module.vpc.aws_subnet.sn-private-2a-db",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2a-was",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fd9e36eb624e173",
            "route_table_id": "rtb-0bbc680de278104e6",
            "subnet_id": "subnet-09935062208e9b355"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2a",
            "module.vpc.aws_nat_gateway.natgw-2a-awx",
            "module.vpc.aws_route_table.rt-awx-private-2a",
            "module.vpc.aws_subnet.sn-private-2a-was",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2a-waselb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e864cf2a5443c8a9",
            "route_table_id": "rtb-0bbc680de278104e6",
            "subnet_id": "subnet-0897d2adfaec4cc57"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2a",
            "module.vpc.aws_nat_gateway.natgw-2a-awx",
            "module.vpc.aws_route_table.rt-awx-private-2a",
            "module.vpc.aws_subnet.sn-private-2a-waselb",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2a-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d39a6742cad64b5e",
            "route_table_id": "rtb-0bbc680de278104e6",
            "subnet_id": "subnet-01d7c48fcd7c091b7"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2a",
            "module.vpc.aws_nat_gateway.natgw-2a-awx",
            "module.vpc.aws_route_table.rt-awx-private-2a",
            "module.vpc.aws_subnet.sn-private-2a-web",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2c-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f37f608c5bb133c",
            "route_table_id": "rtb-0150373a6d9cced66",
            "subnet_id": "subnet-0d1d0b3bdf8949bb1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2c",
            "module.vpc.aws_nat_gateway.natgw-2c-awx",
            "module.vpc.aws_route_table.rt-awx-private-2c",
            "module.vpc.aws_subnet.sn-private-2c-db",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2c-was",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01710bfc583b5bfa9",
            "route_table_id": "rtb-0150373a6d9cced66",
            "subnet_id": "subnet-03d0b6da3ff66404a"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2c",
            "module.vpc.aws_nat_gateway.natgw-2c-awx",
            "module.vpc.aws_route_table.rt-awx-private-2c",
            "module.vpc.aws_subnet.sn-private-2c-was",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2c-waselb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe5d51e0588c184f",
            "route_table_id": "rtb-0150373a6d9cced66",
            "subnet_id": "subnet-0bc273d4a7c0f5124"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2c",
            "module.vpc.aws_nat_gateway.natgw-2c-awx",
            "module.vpc.aws_route_table.rt-awx-private-2c",
            "module.vpc.aws_subnet.sn-private-2c-waselb",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-2c-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cbf27b5e482d181",
            "route_table_id": "rtb-0150373a6d9cced66",
            "subnet_id": "subnet-047e84b20d0e26090"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-natgw-2c",
            "module.vpc.aws_nat_gateway.natgw-2c-awx",
            "module.vpc.aws_route_table.rt-awx-private-2c",
            "module.vpc.aws_subnet.sn-private-2c-web",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-2a-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b1e0eb42409d2d1",
            "route_table_id": "rtb-0ee0d16b1952eee97",
            "subnet_id": "subnet-04315989209ba19d3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-awx",
            "module.vpc.aws_route_table.rt-awx-public",
            "module.vpc.aws_subnet.sn-public-2a-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-2a-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6cfc4442f8806ce",
            "route_table_id": "rtb-0ee0d16b1952eee97",
            "subnet_id": "subnet-0831519e3ef8d899a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-awx",
            "module.vpc.aws_route_table.rt-awx-public",
            "module.vpc.aws_subnet.sn-public-2a-webelb",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-2c-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc3b72c014120d9",
            "route_table_id": "rtb-0ee0d16b1952eee97",
            "subnet_id": "subnet-00417b24aaa719494"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-awx",
            "module.vpc.aws_route_table.rt-awx-public",
            "module.vpc.aws_subnet.sn-public-2c-natgw",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-2c-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000356ca8ef1f6a9",
            "route_table_id": "rtb-0ee0d16b1952eee97",
            "subnet_id": "subnet-00fe76c966740a940"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-awx",
            "module.vpc.aws_route_table.rt-awx-public",
            "module.vpc.aws_subnet.sn-public-2c-webelb",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-07d6572810b4c5d77",
            "description": "3-Tier DB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d6572810b4c5d77",
            "ingress": [],
            "name": "SG-awx-private-db",
            "name_prefix": null,
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-was",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-03ce7cea29f4854a4",
            "description": "2-Tier WAS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ce7cea29f4854a4",
            "ingress": [],
            "name": "SG-awx-private-was",
            "name_prefix": null,
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-was"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-waselb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0999824309f300584",
            "description": "Middleware WAS - ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0999824309f300584",
            "ingress": [],
            "name": "SG-awx-private-waselb",
            "name_prefix": null,
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-waselb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0eaeac0be1bf71d1a",
            "description": "1-Tier Web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaeac0be1bf71d1a",
            "ingress": [],
            "name": "SG-awx-private-web",
            "name_prefix": null,
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-public-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0cd0ba3a1a7cc2381",
            "description": "Bastion security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd0ba3a1a7cc2381",
            "ingress": [],
            "name": "SG-awx-public-bastion",
            "name_prefix": null,
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-public-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-public-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0743aae7fe39d904e",
            "description": "Front-end Web - ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0743aae7fe39d904e",
            "ingress": [],
            "name": "SG-awx-public-webelb",
            "name_prefix": null,
            "owner_id": "374456436099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-public-webelb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-db-rule-MySQL-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL",
            "from_port": 3306,
            "id": "sgrule-3136703396",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07d6572810b4c5d77",
            "self": false,
            "source_security_group_id": "sg-03ce7cea29f4854a4",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-db",
            "module.vpc.aws_security_group.sg-awx-private-was",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-was-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP",
            "from_port": 81,
            "id": "sgrule-814912493",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ce7cea29f4854a4",
            "self": false,
            "source_security_group_id": "sg-0999824309f300584",
            "to_port": 81,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-was",
            "module.vpc.aws_security_group.sg-awx-private-waselb",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-was-rule-MySQL-03",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL",
            "from_port": 3306,
            "id": "sgrule-2122818604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07d6572810b4c5d77",
            "self": false,
            "source_security_group_id": "sg-0cd0ba3a1a7cc2381",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-db",
            "module.vpc.aws_security_group.sg-awx-public-bastion",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-was-rule-SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4024370471",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ce7cea29f4854a4",
            "self": false,
            "source_security_group_id": "sg-0cd0ba3a1a7cc2381",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-was",
            "module.vpc.aws_security_group.sg-awx-public-bastion",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-waselb-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP",
            "from_port": 81,
            "id": "sgrule-3881231557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0999824309f300584",
            "self": false,
            "source_security_group_id": "sg-0eaeac0be1bf71d1a",
            "to_port": 81,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-waselb",
            "module.vpc.aws_security_group.sg-awx-private-web",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-web-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2348606053",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eaeac0be1bf71d1a",
            "self": false,
            "source_security_group_id": "sg-0743aae7fe39d904e",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-web",
            "module.vpc.aws_security_group.sg-awx-public-webelb",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-web-rule-SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2164844999",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eaeac0be1bf71d1a",
            "self": false,
            "source_security_group_id": "sg-0cd0ba3a1a7cc2381",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-private-web",
            "module.vpc.aws_security_group.sg-awx-public-bastion",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-public-bastion-rule-SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "221.148.35.240/32",
              "221.150.51.4/32",
              "13.209.172.51/32"
            ],
            "description": "Bastion for Admin",
            "from_port": 22,
            "id": "sgrule-2163485318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd0ba3a1a7cc2381",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-public-bastion",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-public-webelb-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-781899494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0743aae7fe39d904e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-public-webelb",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-public-webelb-rule-HTTPS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3250024419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0743aae7fe39d904e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-awx-public-webelb",
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2a-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-0c59b84a96d75a9ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0c59b84a96d75a9ce",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2a-DB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2a-was",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-09935062208e9b355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-09935062208e9b355",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2a-WAS"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2a-waselb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-0897d2adfaec4cc57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0897d2adfaec4cc57",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2a-WASELB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2a-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-01d7c48fcd7c091b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01d7c48fcd7c091b7",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2a-WEB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2c-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-0d1d0b3bdf8949bb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0d1d0b3bdf8949bb1",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2c-DB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2c-was",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-03d0b6da3ff66404a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-03d0b6da3ff66404a",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2c-WAS"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2c-waselb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-0bc273d4a7c0f5124",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0bc273d4a7c0f5124",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2c-WASELB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-2c-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-047e84b20d0e26090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-047e84b20d0e26090",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-private-2c-WEB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-public-2a-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-04315989209ba19d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04315989209ba19d3",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-public-2a-NATGW"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-public-2a-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-0831519e3ef8d899a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0831519e3ef8d899a",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-public-2a-WEBELB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-public-2c-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-00417b24aaa719494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00417b24aaa719494",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-public-2c-NATGW"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-public-2c-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:subnet/subnet-00fe76c966740a940",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00fe76c966740a940",
            "map_public_ip_on_launch": false,
            "owner_id": "374456436099",
            "tags": {
              "Name": "SN-public-2c-WEBELB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:vpc/vpc-0b0b2defe7d7e67e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2b9980248325549",
            "default_route_table_id": "rtb-06d6c46c12e91cdbc",
            "default_security_group_id": "sg-0d0baa70f2f203793",
            "dhcp_options_id": "dopt-0970197a7d026ae63",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b0b2defe7d7e67e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06d6c46c12e91cdbc",
            "owner_id": "374456436099",
            "tags": {
              "Name": "VPC-awx"
            }
          }
        }
      ]
    }
  ]
}